cooldude/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cooldude-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: cooldude.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: cooldude-service
                port:
                  number: 80
  ingressClassName: nginx
